tests/baselines/reference/parserTernaryAndCommaOperators1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parserTernaryAndCommaOperators1.ts (3 errors) ====
    b.src ? 1 : 2, c && d;
    ~
!!! error TS2304: Cannot find name 'b'.
                   ~
!!! error TS2304: Cannot find name 'c'.
                        ~
!!! error TS2304: Cannot find name 'd'.
    